[Changes for 1.08 (JSON::Syck 0.31) - 2010-05-23]

Like the 1.07_01 test release aside from small documentation
improvements.

* POD link to JSON::XS from JSON::Syck

* Include a WARNING section in the YAML::Syck pod that mentions that
  the module hasn't been actively maintained since 2007, and that
  perhaps prospective users might want to turn elsewhere.

[Changes for 1.07_01 (JSON::Syck 0.30) - 2010-05-20]

About:

First release by new maintainer (AVAR). The source repository is now
hosted in Git at http://github.com/avar/YAML-Syck

YAML::Syck is still pretty much abandonware, all its bugs likely to
get fixed any time soon.

Code fixes:

* Strings starting with : are now always quoted. Ruby will interpret
  anything starting with a colon as a symbol. Before this fix strings
  exported from YAML::Syck would be interpreted as Ruby symbols when
  read by Ruby's syck.

Release engineering fixes:

* Upgrade from Module::Install 0.68 to 0.97

* Bump included Test::More dependency

* Remove included inc/attributes.pm dependency. Nothing in our
  dependencies used this anymore.

* Add homepage, bugtracker, and repository metadata to META.yml

* Bump perl dependency from 5.00307 to 5.006. 5.005 is all
  Module::Install supported, and YAML::Syck depends on Scalar::Util
  which only goes as low as 5.006.

[Changes for 1.07 (JSON::Syck 0.30) - 2009-04-25]

* Added the missing Loadfile function to JSON::Syck.
  Reported by: Dan McCormick

[Changes for 1.05 (JSON::Syck 0.29) - 2008-06-09]

* Loading a YAML stream containing Regexp nodes under -d:DProf should
  not fail with "panic: Devel::DProf inconsistent subroutine return".
  Reported by: Richard Jelinek

[Changes for 1.04 (JSON::Syck 0.29) - 2008-02-17]

* The 'Name "YAML::Syck::ImplicitBinary" used only once: possible typo'
  warnings no longer triggers in Perl 5.10 when running with perl -w.
  Reported by: Jesse Vincent

[Changes for 1.03 (JSON::Syck 0.29) - 2008-02-16]
