@@ -43,4 +43,5 @@ build_requires  'Devel::Leak' if defined $ENV{'AUTOMATED_TESTING'};
 homepage        'http://search.cpan.org/dist/YAML-Syck';
 repository      'http://github.com/avar/YAML-Syck';
 bugtracker      'https://rt.cpan.org/Public/Dist/Display.html?Name=YAML-Syck';
+tests           't/*.t t/*/*.t';
 WriteAll;
